# opengl_textures

./: CMakeLists.txt  glad.c  main.cpp  shader_class.h
glad/: glad.h
release/: fs.frag
